# ImageDetectApp-train

./: .env.public  .flaskenv  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: __init__.py  model.py  routes.py  train.py
params/: process_model.yml
