[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Игорь Иванов <is.ivanov@bars.group>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
torch = "^2.1.2"
torchvision = "^0.16.2"
websockets = "^12.0"
pyyaml = "^6.0.1"
boto3 = "^1.34.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app:run"